[package]
name = "rizconv"
version = "0.1.0"
authors = ["Matthew Yang <matthew.yang204@gmail.com>"]
edition = "2018"
description = "A fast CLI encodings and line ending converter written in Rust"
license = "GPL-3.0-only"
repository = "https://github.com/matthewyang204/rizconv"
documentation = "https://github.com/matthewyang204/rizconv"
homepage = "https://github.com/matthewyang204/rizconv"
readme = "README.md"

[dependencies]
